Security Manager JVM option can now be set and displayed in the Security Service page.
svn path=/trunk/; revision=31935


Former-commit-id: 07de08a6fb1d2b448285420450878bdb695f9f67